--- a/appliWeb/src/main/webapp/calcul.html
+++ b/appliWeb/src/main/webapp/calcul.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>calcul</title>
 </head>
 <body>
 	<form action="./CalculServlet" method="GET">
