--- a/appliWeb/src/main/webapp/index.html
+++ b/appliWeb/src/main/webapp/index.html
@@ -5,6 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
+    <a href="./CalculServlet?a=3&b=4">3*4</a> <br/>
 	<a href="calcul.html">calcul</a> <br/>
 	<a href="paramTva.html">tva</a> <br/>
 </body>
