avec web.xml et demo ajax/json

--- a/appliWeb/src/main/webapp/index.html
+++ b/appliWeb/src/main/webapp/index.html
@@ -7,6 +7,7 @@
 <body>
     <a href="./CalculServlet?a=3&b=4">3*4</a> <br/>
 	<a href="calcul.html">calcul</a> <br/>
-	<a href="paramTva.html">tva</a> <br/>
+	<a href="paramTva.html">tva (servlet)</a> <br/>
+	<a href="tvaAjax.html">tva (ajax+servlet/json)</a> <br/>
 </body>
 </html>
