--- a/myAppliWeb/src/main/webapp/index.html
+++ b/myAppliWeb/src/main/webapp/index.html
@@ -6,8 +6,10 @@
 </head>
 <body>
     <a href="./CalculServlet?a=3&b=4">3*4</a> <br/>
+    <a href="./TvaAjaxJsonServlet?ht=200&taux=20">tva pour ht=200 et taux=20</a> <br/>
 	<a href="calcul.html">calcul</a> <br/>
 	<a href="paramTva.html">tva (servlet)</a> <br/>
 	<a href="tvaAjax.html">tva (ajax+servlet/json)</a> <br/>
+	<a href="tva.jsp">tva.jsp</a>
 </body>
 </html>
