--- a/myAppliWeb/src/main/webapp/index.html
+++ b/myAppliWeb/src/main/webapp/index.html
@@ -10,6 +10,7 @@
 	<a href="calcul.html">calcul</a> <br/>
 	<a href="paramTva.html">tva (servlet)</a> <br/>
 	<a href="tvaAjax.html">tva (ajax+servlet/json)</a> <br/>
-	<a href="tva.jsp">tva.jsp</a>
+	<a href="tva.jsp">tva.jsp</a><br/>
+	<a href="emprunt.jsp">emprunt.jsp</a><br/>
 </body>
 </html>
