--- a/myAppliWeb/src/main/webapp/index.html
+++ b/myAppliWeb/src/main/webapp/index.html
@@ -12,5 +12,6 @@
 	<a href="tvaAjax.html">tva (ajax+servlet/json)</a> <br/>
 	<a href="tva.jsp">tva.jsp</a><br/>
 	<a href="emprunt.jsp">emprunt.jsp</a><br/>
+	<a href="param_emprunt_mvc.jsp">emprunt mvc</a><br/>
 </body>
 </html>
