--- a/myAppliWeb/src/main/webapp/index.html
+++ b/myAppliWeb/src/main/webapp/index.html
@@ -13,5 +13,6 @@
 	<a href="tva.jsp">tva.jsp</a><br/>
 	<a href="emprunt.jsp">emprunt.jsp</a><br/>
 	<a href="param_emprunt_mvc.jsp">emprunt mvc</a><br/>
+	<a href="produits.jsp">produits mvc</a><br/>
 </body>
 </html>
