debut tpCaddy HttpSession

--- a/myAppliWeb/src/main/webapp/index.html
+++ b/myAppliWeb/src/main/webapp/index.html
@@ -14,5 +14,6 @@
 	<a href="emprunt.jsp">emprunt.jsp</a><br/>
 	<a href="param_emprunt_mvc.jsp">emprunt mvc</a><br/>
 	<a href="produits.jsp">produits mvc</a><br/>
+	<a href="addInCaddy.jsp">addInCaddy</a><br/>
 </body>
 </html>
