jstl sur visuCaddy2.jsp

--- a/myAppliWeb/src/main/webapp/index.html
+++ b/myAppliWeb/src/main/webapp/index.html
@@ -15,7 +15,7 @@
 	<a href="param_emprunt_mvc.jsp">emprunt mvc</a><br/>
 	<a href="produits.jsp">produits mvc</a><br/>
 	<a href="addInCaddy.jsp">addInCaddy</a><br/>
-	<a href="visuCaddy.jsp">visuCaddy</a><br/>
+	<a href="visuCaddy2.jsp">visuCaddy</a><br/>
 	<a href="login.jsp">login</a><br/>
 </body>
 </html>
