login et logout

--- a/myAppliWeb/src/main/webapp/index.html
+++ b/myAppliWeb/src/main/webapp/index.html
@@ -16,6 +16,6 @@
 	<a href="produits.jsp">produits mvc</a><br/>
 	<a href="addInCaddy.jsp">addInCaddy</a><br/>
 	<a href="visuCaddy2.jsp">visuCaddy</a><br/>
-	<a href="login.jsp">login</a><br/>
+	<a href="logout.jsp">logout</a><br/>
 </body>
 </html>
